updated navbar section

--- a/index.html
+++ b/index.html
@@ -13,16 +13,7 @@
   <body>
     <header>
       <div class="nav">
-        <img
-          src="/images/logo.png"
-          class="logo"
-          alt="Piyush Academy Logo"
-        />
-
-        <div class="nav-text">
-          <h2>Piyush Academy</h2>
-          <p>Training | Consulting | Culture</p>
-        </div>
+        <img src="/images/logo.png" class="logo" alt="Piyush Academy Logo" />
       </div>
     </header>
 
@@ -253,7 +244,13 @@
 
       <div class="info-box" id="payment">
         <!-- DIRECT REGISTER BUTTON -->
-        <form><script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_Rf5SUF3MYIc8sd" async> </script> </form>
+        <form>
+          <script
+            src="https://checkout.razorpay.com/v1/payment-button.js"
+            data-payment_button_id="pl_Rf5SUF3MYIc8sd"
+            async
+          ></script>
+        </form>
       </div>
     </div>
     <!-- closes container -->
