--- a/index.html
+++ b/index.html
@@ -244,13 +244,7 @@
 
       <div class="info-box" id="payment">
         <!-- DIRECT REGISTER BUTTON -->
-        <form>
-          <script
-            src="https://checkout.razorpay.com/v1/payment-button.js"
-            data-payment_button_id="pl_Rf5SUF3MYIc8sd"
-            async
-          ></script>
-        </form>
+        <form><script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_RgjSp6VBhMADql" async> </script> </form>
       </div>
     </div>
     <!-- closes container -->
