updated application date

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <li>Access to Demanding Projects</li>
           <li>Internship Opportunity</li>
           <li>100% Placement Assistance</li>
-          <li>Batch Starts on: <strong>December 3rd</strong></li>
+          <li>Batch Starts on: <strong>January 12th</strong></li>
         </ul>
       </div>
 
