Initial commit - AI seminar doctors site

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Piyush Academy - MERN Stack Developer Program</title>
+    <title>Piyush Academy - AI for Smart Healthcare</title>
     <link rel="stylesheet" href="style.css" />
     <!-- OPEN GRAPH (Link Preview for WhatsApp, Telegram, Facebook) -->
 <meta property="og:title" content="Piyush Academy - MERN Stack Developer Program" />
@@ -22,22 +22,30 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Poppins:wght@500;600;700&display=swap"
       rel="stylesheet"
     />
-  </head>
-  <body>
-    <header>
-      <div class="nav">
-        <img src="/images/logo.png" class="logo" alt="Piyush Academy Logo" />
-      </div>
-    </header>
+ </head>
+
+<body style="margin:0;">
+
+  <header style="margin:0; padding:0;">
+    <div class="nav" style="margin:0; padding:10px 20px;">
+      <img src="./images/piyushlgo.png"
+           class="logo"
+           alt="Piyush Academy Logo"
+           style="height:100px; width:auto; display:block;">
+    </div>
+  </header>
+
+</body>
+
 
     <div class="container">
       <!-- HERO SECTION -->
       <section class="hero fade-in">
         <div class="hero-text">
-          <h1 class="typing">MERN Stack Developer Program</h1>
+          <h1 class="typing">AI for Smart Healthcare</h1>
           <p>
-            Join our Industry Certified MERN Training Program. Next batch starts
-            on January 12th — Limited seats available!
+           Transforming Healthcare with Technology & AI
+             Seminar on February 08th
           </p>
           <a href="#payment" class="hero-btn">Apply Now</a>
 
@@ -53,85 +61,108 @@
       <h2 class="section-title">Program Details</h2>
       <div class="features">
         <ul>
-          <li>Fee: <strong>₹6,500</strong></li>
-          <li>1 Demo Class – If not satisfied, <strong>100% Refund</strong></li>
-          <li>Industry Certified Trainer</li>
-          <li>Course Material Provided</li>
-          <li>Lots of eBooks and Notes</li>
-          <li>Access to Demanding Projects</li>
-          <li>Internship Opportunity</li>
-          <li>100% Placement Assistance</li>
-          <li>Batch Starts on: <strong>January 12th</strong></li>
+          <li>Registration Fee: <strong>499/-Only</strong></li>
+          <li>Microsoft Certified Certified Trainer</li>
         </ul>
       </div>
 
       <!-- WHY MERN -->
-      <h2 class="section-title">Why Choose This MERN Course?</h2>
+      <h2 class="section-title">Why Attend This Seminar?</h2>
       <div class="why-box">
         <ul>
-          <li>The only course you need to become a MERN-Stack Web Developer</li>
-          <li>Hands-on learning with real world MERN projects</li>
-          <li>Complete Frontend (HTML, CSS, JavaScript, Tailwind)</li>
-          <li>Complete Backend (Node.js, Express.js, APIs & deployment)</li>
-          <li>React – components, state, hooks & UI frameworks</li>
-          <li>Database: SQL + MongoDB (Mongoose)</li>
-          <li>Git, GitHub & Version Control included</li>
+          <li>Improve clinical efficiency</li>
+          <li>Learn practical AI tools</li>
+          <li>Stay future-ready in medical practice</li>
         </ul>
       </div>
 
       <!-- WHAT YOU WILL LEARN -->
-      <h2 class="section-title">What You’ll Learn</h2>
+      <h2 class="section-title">Who Should Attend</h2>
       <div class="learn-box">
         <ul>
-          <li>Complete Frontend Development (HTML, CSS, JS)</li>
-          <li>Responsive Web Design & UI/UX Basics</li>
-          <li>Advanced JavaScript & Modern ES6+</li>
-          <li>Backend Development with Node.js & Express.js</li>
-          <li>API Development & Authentication</li>
-          <li>MongoDB, Database Design & Mongoose</li>
-          <li>MERN Stack Full Project</li>
-          <li>Real-Life Projects & Internship Training</li>
+          <li>MBBS Doctors</li>
+          <li>Specialists</li>
+          <li>Hospital Administrators</li>
+          <li>Medical Students</li>
         </ul>
       </div>
 
-      <!-- WHAT'S NEW -->
-      <h2 class="section-title">What’s New?</h2>
-      <div class="whatsnew-box">
+      <!-- WHAT YOU WILL LEARN -->
+      <h2 class="section-title">What's New</h2>
+      <div class="learn-box">
+        <ul>
+          <li>Real-world AI use cases </li>
+          <li>Live demonstration</li>
+          <li>Certificate of Participation</li>
+          <li>Networking with peers</li>
+        </ul>
+      </div>
+
+      <!-- WHAT YOU WILL LEARN -->
+      <h2 class="section-title">Call to Action</h2>
+      <div class="learn-box">
+        <ul>
+          <li>“Limited Seats Available – Register Today” </li>
+        </ul>
+      </div>
+
+
+       <!-- MOTIVATION -->
+      <h2 class="section-title">Seminar Objective</h2>
+      <div class="motivation2-box">
         <p>
-          Students in structured paid batches are proven to be
-          <strong>10x more serious</strong>, show higher completion rates, and
-          deliver better project results.
+          <strong
+            >To provide doctors with a clear and practical understanding of how technology and AI are transforming modern healthcare, 
+            helping them improve diagnosis, patient care, and clinical efficiency while preparing for the future of medical practice.</strong
+          >
+        </p>
+      </div>
+
+
+      <!-- MOTIVATION -->
+      <h2 class="section-title">Why Technology & AI Matter in Modern Healthcare</h2>
+      <div class="motivation2-box">
+        <p>
+          <strong
+            >Technology and AI improve diagnosis accuracy, patient care, and clinical efficiency by enabling faster decision-making, 
+            smarter tools, and streamlined healthcare processes—making modern healthcare more effective and future-ready.</strong
+          >
+        </p>
+      </div>
+
+
+            <!-- MOTIVATION -->
+      <h2 class="section-title">How this seminar benefits doctors practically</h2>
+      <div class="motivation2-box">
+        <p>
+          <strong
+            >This seminar helps doctors understand and use practical AI and technology tools to improve diagnosis, save time, 
+            enhance patient care, streamline clinic and hospital workflows, and stay updated with the future of modern medical practice.</strong
+          >
         </p>
       </div>
 
       <!-- ALL TOPICS COVERED -->
-      <h2 class="section-title">All Topics Covered</h2>
+      <h2 class="section-title">Topics Covered</h2>
       <div class="topics-box">
         <div class="topics-col">
           <ul>
-            <li>✔ HTML, CSS, JavaScript</li>
-            <li>✔ DOM Manipulation</li>
-            <li>✔ Flexbox & Responsive Design</li>
-            <li>✔ Bootstrap & Tailwind</li>
-            <li>✔ Git & GitHub</li>
-            <li>✔ Terminal Commands</li>
-            <li>✔ Promises & Callbacks</li>
-            <li>✔ Closures & Functions</li>
-          </ul>
-        </div>
-        <div class="topics-col">
-          <ul>
-            <li>✔ Node.js & Express.js</li>
-            <li>✔ APIs & Middlewares</li>
-            <li>✔ Authentication (JWT)</li>
-            <li>✔ MongoDB & Mongoose</li>
-            <li>✔ SQL Basics</li>
-            <li>✔ Deployment</li>
-            <li>✔ React (Hooks, State & UI)</li>
-            <li>✔ Full MERN Projects</li>
+            <li>✔ Introduction to AI in Healthcare</li>
+            <li>✔ AI in Diagnosis & Medical Imaging</li>
+            <li>✔ Technology in Patient Data Management</li>
+            <li>✔ AI Tools for Doctors & Clinics</li>
+            <li>✔ Automation in Hospitals</li>
+            <li>✔ Ethical & Legal Aspects of AI in Medicine</li>
+            <li>✔ Future of Doctors in the AI Era</li>
+            
           </ul>
         </div>
       </div>
+
+
+
+
+
 
       <!-- CERTIFICATE SECTION -->
       <h2 class="section-title">Certificate of Completion</h2>
@@ -142,113 +173,83 @@
           class="certificate-img"
         />
         <p>
-          All students receive a
-          <strong>Verified Certificate of Completion</strong> after finishing
-          the course.
+          All participant receives a
+          <strong>Verified Certificate of Completion</strong> after the Seminar.
         </p>
-        <ul class="cert-list">
-          <li>✔ Add to Resume</li>
-          <li>✔ Use for Job Applications</li>
-          <li>✔ Upload on LinkedIn</li>
-          <li>✔ Internship Opportunities</li>
-        </ul>
       </div>
 
+     
+
+
       <!-- PROJECTS -->
-      <h2 class="section-title">Projects We Will Build</h2>
+      <h2 class="section-title">Highlights</h2>
 
       <div class="projects-box">
         <ul class="projects-list">
           <!-- PORTFOLIO WEBSITE -->
           <li>
             <img
-              src="images/portfolio.png"
+              src="images/vtot.png"
               class="project-thumb fix-card img-portfolio"
             />
-            <span>✔ Personal Portfolio Website</span>
+            <span>✔ Voice-to-Text: Create prescriptions in English/Hindi instantly.</span>
           </li>
 
           <!-- WEATHER APP -->
           <li>
             <img
-              src="images/whether1.png"
+              src="images/dpdp.png"
               class="project-thumb fix-card img-weather"
             />
-            <span>✔ Weather App using APIs</span>
+            <span>✔ DPDP Act Compliance: Secure patient data & avoid penalties.</span>
           </li>
 
           <!-- AUTH SYSTEM -->
           <li>
             <img
-              src="images/auth.png"
+              src="images/draftletter.png"
               class="project-thumb fix-card img-auth"
             />
-            <span>✔ Authentication System (JWT + Cookies)</span>
+            <span>✔ TPA & Admin Automation: Draft letters & summarize reports in second with AI.</span>
           </li>
 
           <!-- MERN E-COMMERCE -->
           <li>
             <img
-              src="images/mern-stack.png"
+              src="images/mobilefirst.png"
               class="project-thumb fix-card img-mern"
             />
-            <span>✔ Full MERN E-Commerce Website</span>
+            <span>✔ Mobile-First Tools: Run a samrter clinic from your phone.</span>
           </li>
 
-          <!-- SOCIAL MEDIA MINI APP -->
-          <li>
-            <img
-              src="images/mini.png"
-              class="project-thumb fix-card img-mini"
-            />
-            <span>✔ Social Media Mini-App</span>
-          </li>
-        </ul>
-      </div>
 
-      <!-- MOTIVATION -->
-      <h2 class="section-title">Start Your Development Journey Today</h2>
-      <div class="motivation2-box">
-        <p>
-          <strong
-            >You are just a few months away from becoming a Full-Stack
-            Developer.</strong
-          >
-        </p>
-        <p>
-          Coding becomes simple with the right guidance. Learn step-by-step and
-          build real-world projects with us.
-        </p>
-      </div>
+  
 
       <!-- FAQ SECTION -->
       <h2 class="section-title">Frequently Asked Questions</h2>
       <div class="faq-box">
         <details>
-          <summary>Do I need prior coding knowledge?</summary>
+          <summary>Who can attend this seminar?</summary>
           <p>
-            No! This course covers everything from basics to advanced topics.
+            This seminar is open to MBBS doctors, specialists, hospital administrators,
+             and medical professionals who want to understand the practical use of technology and AI in healthcare.
           </p>
         </details>
         <details>
-          <summary>What is the batch start date?</summary>
-          <p>The new batch starts on December 3rd.</p>
+          <summary>Is this seminar beginner-friendly?</summary>
+          <p>Yes. The seminar is designed to be easy to understand, even for doctors with no prior knowledge of AI or technology.</p>
         </details>
         <details>
-          <summary>Will I get placement assistance?</summary>
-          <p>Yes! 100% placement assistance is provided.</p>
+          <summary>Is the fee refundable?</summary>
+          <p>The registration fee is non-refundable, as seats are limited and arrangements are made in advance.</p>
         </details>
         <details>
-          <summary>Is there a refund policy?</summary>
-          <p>Yes. 100% refund if demo class is not satisfying.</p>
+          <summary>Will I get a certificate?</summary>
+          <p>Yes. All registered participants will receive a Certificate of Participation after attending the seminar.</p>
         </details>
         <details>
-          <summary>Will I get real projects?</summary>
-          <p>Yes, multiple MERN stack real-life projects will be built.</p>
-        </details>
-        <details>
-          <summary>Do you provide materials?</summary>
-          <p>Yes! Notes, ebooks, assignments & recorded videos are provided.</p>
+          <summary>What should I bring?</summary>
+          <p>Please bring a notebook, pen, and your mobile phone. Carrying a laptop is optional but not mandatory.</p>
         </details>
       </div>
 
