Fix mobile layout, center alignment, white-blue theme

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <h1 class="typing">AI for Smart Healthcare</h1>
           <p>
            Transforming Healthcare with Technology & AI
-             Seminar on February 08th
+             Seminar on January 31st 
           </p>
           <a href="#payment" class="hero-btn">Apply Now</a>
 
