Update: all text blue and seminar changed to bootcamp

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
           <h1 class="typing">AI for Smart Healthcare</h1>
           <p>
            Transforming Healthcare with Technology & AI
-             Seminar on January 31st 
+             Bootcamp
+ on January 31st 
           </p>
           <a href="#payment" class="hero-btn">Apply Now</a>
 
@@ -67,7 +68,8 @@
       </div>
 
       <!-- WHY MERN -->
-      <h2 class="section-title">Why Attend This Seminar?</h2>
+      <h2 class="section-title">Why Attend This Bootcamp
+?</h2>
       <div class="why-box">
         <ul>
           <li>Improve clinical efficiency</li>
@@ -108,7 +110,8 @@
 
 
        <!-- MOTIVATION -->
-      <h2 class="section-title">Seminar Objective</h2>
+      <h2 class="section-title">Bootcamp
+ Objective</h2>
       <div class="motivation2-box">
         <p>
           <strong
@@ -132,11 +135,13 @@
 
 
             <!-- MOTIVATION -->
-      <h2 class="section-title">How this seminar benefits doctors practically</h2>
+      <h2 class="section-title">How this Bootcamp
+ benefits doctors practically</h2>
       <div class="motivation2-box">
         <p>
           <strong
-            >This seminar helps doctors understand and use practical AI and technology tools to improve diagnosis, save time, 
+            >This Bootcamp
+ helps doctors understand and use practical AI and technology tools to improve diagnosis, save time, 
             enhance patient care, streamline clinic and hospital workflows, and stay updated with the future of modern medical practice.</strong
           >
         </p>
@@ -174,7 +179,8 @@
         />
         <p>
           All participant receives a
-          <strong>Verified Certificate of Completion</strong> after the Seminar.
+          <strong>Verified Certificate of Completion</strong> after the Bootcamp
+.
         </p>
       </div>
 
@@ -229,15 +235,19 @@
       <h2 class="section-title">Frequently Asked Questions</h2>
       <div class="faq-box">
         <details>
-          <summary>Who can attend this seminar?</summary>
+          <summary>Who can attend this Bootcamp
+?</summary>
           <p>
-            This seminar is open to MBBS doctors, specialists, hospital administrators,
+            This Bootcamp
+ is open to MBBS doctors, specialists, hospital administrators,
              and medical professionals who want to understand the practical use of technology and AI in healthcare.
           </p>
         </details>
         <details>
-          <summary>Is this seminar beginner-friendly?</summary>
-          <p>Yes. The seminar is designed to be easy to understand, even for doctors with no prior knowledge of AI or technology.</p>
+          <summary>Is this Bootcamp
+ beginner-friendly?</summary>
+          <p>Yes. The Bootcamp
+ is designed to be easy to understand, even for doctors with no prior knowledge of AI or technology.</p>
         </details>
         <details>
           <summary>Is the fee refundable?</summary>
@@ -245,7 +255,8 @@
         </details>
         <details>
           <summary>Will I get a certificate?</summary>
-          <p>Yes. All registered participants will receive a Certificate of Participation after attending the seminar.</p>
+          <p>Yes. All registered participants will receive a Certificate of Participation after attending the Bootcamp
+.</p>
         </details>
         <details>
           <summary>What should I bring?</summary>
